Add fluxo de consulta unica e lista
